--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>  
     <h1>I can push to github</h1>   
@@ -15,6 +16,7 @@
     </p>
     <p>web hero web hero </p>
     <h1>okay okay carry on</h1>
+    <p>I am codding and Codding</p>
 
     
 </body>
