--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <p>web hero web hero </p>
     <h1>okay okay carry on</h1>
     <p>I am codding and Codding</p>
+    <img src="./koldalen.jpg" alt="">
+    <img src="./lake.jpg" alt="">
 
     
 </body>
